Update Chinese translations for spell names and descriptions

--- a/global_packs/required_resources/aim_to_star_language_pack/assets/extraspellattributes/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/extraspellattributes/lang/zh_cn.json
@@ -13,20 +13,20 @@
     "item.extraspellattributes.martialbracer": "龟甲护腕",
     "item.extraspellattributes.defiancering": "蔑视之戒",
     "desc.extraspellattributes.determination": "在接下来的4s内，恢复坚定效果百分比的生命值损失。",
-    "attribute.name.extraspellattributes.convertfromfrost": "寒冰魔能的攻击伤害加成",
+    "attribute.name.extraspellattributes.convertfromfrost": "寒冰法术强度对攻击伤害的额外加成",
     "itemGroup.extraspellattributes.general": "Extra RPG Attributes Trinkets",
     "item.extraspellattributes.undyingsoul": "不朽亡魂",
     "item.extraspellattributes.goldquartzamulet": "石英金护符",
     "attribute.name.extraspellattributes.glancingblow": "受侧击的概率",
-    "attribute.name.extraspellattributes.converttofrost": "攻击伤害的寒冰魔能加成",
+    "attribute.name.extraspellattributes.converttofrost": "攻击伤害对寒冰法术强度的额外加成",
     "attribute.name.extraspellattributes.serenity": "平静",
     "desc.extraspellattributes.glance": "侧击只能造成65%的伤害。只有实体的攻击（而非火焰或中毒）才能触发侧击。",
-    "attribute.name.extraspellattributes.convertfromfire": "火焰魔能的攻击伤害加成",
-    "attribute.name.extraspellattributes.converttofire": "攻击伤害的火焰魔能加成",
-    "attribute.name.extraspellattributes.converttoarcane": "攻击伤害的奥秘魔能加成",
+    "attribute.name.extraspellattributes.convertfromfire": "火焰法术强度对攻击伤害的额外加成",
+    "attribute.name.extraspellattributes.converttofire": "攻击伤害对火焰法术强度的额外加成",
+    "attribute.name.extraspellattributes.converttoarcane": "攻击伤害对奥秘法术强度的额外加成",
     "attribute.name.extraspellattributes.reabsorption": "吸收再生",
     "item.extraspellattributes.turtlegirdle": "龟甲腰带",
-    "attribute.name.extraspellattributes.convertfromarcane": "奥秘魔能的攻击伤害加成",
+    "attribute.name.extraspellattributes.convertfromarcane": "奥秘法术强度对攻击伤害的额外加成",
     "item.extraspellattributes.netheritediamondring": "镶钻合金戒指",
-    "attribute.name.extraspellattributes.converttoheal": "攻击伤害的治愈魔能加成"
+    "attribute.name.extraspellattributes.converttoheal": "攻击伤害对治愈法术强度的额外加成"
 }
