--- a/global_packs/required_resources/aim_to_star_language_pack/assets/spellbladenext/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/spellbladenext/lang/zh_cn.json
@@ -1,9 +1,9 @@
 {
     "itemGroup.spellbladenext.general": "Spellblades and Such",
-    "spell.spellbladenext.whirlingblades.description": "像激流附魔的三叉戟一样瞄准并发射自己",
+    "spell.spellbladenext.whirlingblades.description": "瞄准后施法，你会像使用激流附魔的三叉戟一样向前冲刺",
     "entity.spellbladenext.amethyst": "紫水晶",
     "item.spellbladenext.arcane_blade": "奥秘魔剑",
-    "spell.spellbladenext.frostvert.description": "释放烈焰猛击，滞空时会先将自己发射出去。造成 {damage}_0 点物理和额外 {damage}_1 点火焰范围伤害。释放时，你将会安全落地。",
+    "spell.spellbladenext.frostvert.description": "释放烈焰猛击，造成 {damage}_0 点物理和额外 {damage}_1 点火焰法术范围伤害。滞空时施法会先向前方高高跃起再落地猛击（可以用该法术规避摔落伤害）。",
     "item.spellbladenext.arcane_battlemage_spell_book": "奥秘术典",
     "item.spellbladenext.arcane_orb": "奥秘法球",
     "item.spellbladenext.frost_battlemage_spell_book": "寒冰术典",
@@ -12,43 +12,43 @@
     "item.spellbladenext.fire_battlemage_spell_book": "火焰术典",
     "item.spellbladenext.frost_orb": "寒冰法球",
     "item.spellbladenext.monkeystaff": "金箍棒",
-    "spell.spellbladenext.reckoning.description": "旋舞金箍棒，每秒造成 {damage} 点物理伤害（无法暴击），攻击速度对伤害有加成。攻击多个敌人时没有伤害衰减。",
-    "spell.spellbladenext.combustion.description": "被动：你的每一次攻击都会点燃敌人，燃烧持续2秒。主动：施放法术时，已被点燃的敌人受到燃烧伤害的频率会加快，其每秒受到 {damage} 点火焰伤害。",
+    "spell.spellbladenext.reckoning.description": "旋舞金箍棒，每秒造成 {damage} 点物理伤害，攻击速度对伤害有加成。攻击多个敌人时没有伤害衰减。",
+    "spell.spellbladenext.combustion.description": "被动：你的每一次攻击都会点燃敌人，燃烧持续2秒。主动：施放法术，影响你周围已被点燃的敌人，提高它们受到燃烧伤害的频率，使他们每秒受到 {damage} 点火焰伤害。",
     "spell.spellbladenext.monkeyreflect.description": "释放技能掀起飓风，狠狠击退敌人并对其造成每秒 {damage} 点物理伤害（可以暴击）。",
     "attribute.name.spellbladenext.convertfromarcane": "奥秘法术强度对攻击伤害的额外加成",
     "spell.spellbladenext.monkeyslam.description": "直冲云霄，法术施放期间免疫伤害。",
     "attribute.name.spellbladenext.converttoarcane": "攻击伤害对奥秘法术强度的额外加成",
     "spell.spellbladenext.monkeyreflect.name": "裂刃飓风",
-    "item.spellbladenext.omni": "具象全知",
-    "entity.spellbladenext.magister": "魔剑教士",
+    "item.spellbladenext.omni": "结晶全知",
+    "entity.spellbladenext.magister": "咒剑教士",
     "item.spellbladenext.blazing_legs": "烈焰教士护腿",
-    "item.spellbladenext.arcaneherald_chest": "神秘纹章官胸甲",
-    "item.spellbladenext.magus_chest": "源初长袍",
+    "item.spellbladenext.arcaneherald_chest": "神秘先驱胸甲",
+    "item.spellbladenext.magus_chest": "大咒术师长袍",
     "spell.spellbladenext.combustion.name": "煽风点火",
     "item.spellbladenext.runeblazing_chest": "烈焰符文胸甲",
     "item.spellbladenext.runeblazing_head": "烈焰符文头盔",
-    "entity.spellbladenext.hexbladeportal": "魔剑会之门",
+    "entity.spellbladenext.hexbladeportal": "咒剑会之门",
     "item.spellbladenext.runeblaze_plate": "烈焰符文板",
-    "item.spellbladenext.ashherald_head": "灰烬纹章官头盔",
-    "item.spellbladenext.eviscerateoil": "杀戮涂料",
+    "item.spellbladenext.ashherald_head": "灰烬先驱头盔",
+    "item.spellbladenext.eviscerateoil": "杀意涂料",
     "spell.spellbladenext.finalstrike.name": "音速斩击",
     "spell.spellbladenext.arcaneoverdrive.name": "奥秘超载",
     "item.spellbladenext.runeblazing_legs": "烈焰符文护腿",
     "spell.spellbladenext.flicker_strike.name": "烈焰闪击",
     "spell.spellbladenext.echoes.name": "符文回响",
-    "item.spellbladenext.frostherald_feet": "严寒纹章官靴子",
+    "item.spellbladenext.frostherald_feet": "严寒先驱靴子",
     "spell.spellbladenext.smite.description": "重击你面前一定范围内的敌人，造成 {damage}_0 点物理伤害（无法暴击），每命中一个敌人，额外造成 {damage}_1 点治愈伤害，并且对亡灵生物造成额外50%治愈伤害。",
-    "spell.spellbladenext.arcaneflourish.description": "快速旋转，造成 {damage}_0 点物理伤害（无法暴击）与 {damage}_1 点奥秘伤害。",
+    "spell.spellbladenext.arcaneflourish.description": "快速旋转，造成 {damage}_0 点物理伤害与 {damage}_1 点奥秘法术伤害。",
     "item.spellbladenext.runic_echoes_spell_book": "余音残卷",
     "item.spellbladenext.smiteoil": "惩灭涂料",
     "item.spellbladenext.runefrost_nugget": "严寒符文螺栓",
     "spell.spellbladenext.coldbuff.name": "冰封之王的诅咒",
     "spell.spellbladenext.reckoning.name": "大闹天宫",
-    "spell.spellbladenext.frostslash.name": "寒光阵风",
-    "item.spellbladenext.magus_legs": "源初护腿",
-    "item.spellbladenext.runefrosted_chest": "严寒符文胸甲",
+    "spell.spellbladenext.frostslash.name": "剑刃风暴",
+    "item.spellbladenext.magus_legs": "大咒术师护腿",
+    "item.spellbladenext.runefrosted_chest": "寒冰符文胸甲",
     "item.spellbladenext.runegleaming_head": "隐烁符文头盔",
-    "item.spellbladenext.ashherald_chest": "灰烬纹章官胸甲",
+    "item.spellbladenext.ashherald_chest": "灰烬先驱胸甲",
     "item.spellbladenext.blazing_head": "破法头盔",
     "item.spellbladenext.spelloil": "法术涂料",
     "spell.spellbladenext.flicker_strike.description": "依次跃向周围的敌人，造成 {damage}_0 点物理伤害（无法暴击）与 {damage}_1 点火焰伤害，攻击速度对伤害有加成。若只有一个目标，则集中攻击一个目标。",
@@ -56,16 +56,16 @@
     "item.spellbladenext.gleaming_head": "克法之冠",
     "spell.spellbladenext.eviscerate.name": "屠杀",
     "spell.spellbladenext.flameslash.name": "裂焰",
-    "item.spellbladenext.magus_feet": "源初靴子",
+    "item.spellbladenext.magus_feet": "大咒术师靴子",
     "entity.spellbladenext.flamewaveprojectile": "焰浪",
     "item.spellbladenext.glacial_gladius": "冰川短剑",
-    "item.spellbladenext.arcaneherald_head": "神秘纹章官头盔",
+    "item.spellbladenext.arcaneherald_head": "神秘先驱头盔",
     "spell.spellbladenext.whirlingblades.name": "激流",
     "effect.spellbladenext.hexed": "魔咒缠身",
     "item.spellbladenext.runegleaming_chest": "隐烁符文胸甲",
-    "item.spellbladenext.ashherald_feet": "灰烬纹章官靴子",
+    "item.spellbladenext.ashherald_feet": "灰烬先驱靴子",
     "spell.spellbladenext.eviscerate.description": "遁入无形，在一秒内攻击最近的敌人五次，造成 {damage}_0 点物理伤害和 {damage}_1 点寒冰伤害，攻击速度对两种伤害有加成。如果施法结束前击杀目标，你可以继续对最近的敌人施法一秒。",
-    "item.spellbladenext.frostherald_head": "严寒纹章官头盔",
+    "item.spellbladenext.frostherald_head": "严寒先驱头盔",
     "item.spellbladenext.fire_claymore": "火焰阔剑",
     "item.spellbladenext.frozen_feet": "死寒教士靴子",
     "item.spellbladenext.runeblazing_feet": "烈焰符文靴子",
@@ -73,43 +73,43 @@
     "spell.spellbladenext.arcaneflourish.name": "奥秘华舞",
     "item.spellbladenext.whirlwindoil": "旋风涂料",
     "item.spellbladenext.gleaming_feet": "隐烁教士靴子",
-    "item.spellbladenext.magus_head": "源初兜帽",
+    "item.spellbladenext.magus_head": "大咒术师兜帽",
     "item.spellbladenext.frozen_head": "寻法之帽",
     "item.spellbladenext.blazing_chest": "烈焰教士胸甲",
     "spell.spellbladenext.frostvert.name": "龙之震击",
-    "item.spellbladenext.offering": "魔剑会之盟",
-    "item.spellbladenext.arcaneherald_feet": "神秘纹章官靴子",
-    "item.spellbladenext.runefrost_ingot": "严寒符文锭",
+    "item.spellbladenext.offering": "咒剑祭品",
+    "item.spellbladenext.arcaneherald_feet": "神秘先驱靴子",
+    "item.spellbladenext.runefrost_ingot": "寒冰符文锭",
     "item.spellbladenext.flickerstrikeoil": "闪击涂料",
     "item.spellbladenext.runegleaming_legs": "隐烁符文护腿",
     "item.spellbladenext.runefrost_plate": "严寒符文板",
     "item.spellbladenext.frost_blade": "寒冰魔剑",
     "effect.spellbladenext.unleash": "爆发",
     "spell.spellbladenext.frostblink.name": "奥秘闪击",
-    "item.spellbladenext.deathchill_spell_book": "死寒之典",
+    "item.spellbladenext.deathchill_spell_book": "死寒全书",
     "spell.spellbladenext.monkeyslam.name": "筋斗云",
     "item.spellbladenext.frozen_chest": "死寒教士胸甲",
     "spell.spellbladenext.maelstrom.name": "星海漩涡",
-    "entity.spellbladenext.magus": "魔术师",
+    "entity.spellbladenext.magus": "大咒术师",
     "spell.spellbladenext.eldritchblast.name": "回响音爆",
     "spell.spellbladenext.smite.name": "神罚",
-    "spell.spellbladenext.bladestorm.description": "召唤一道回响漩涡，可以跟踪目标，每半秒造成 {damage} 点奥秘伤害。每有一层爆发效果，使用后刷新冷却。",
-    "item.spellbladenext.runefrosted_head": "严寒符文头盔",
-    "item.spellbladenext.frostherald_legs": "严寒纹章官护腿",
-    "spell.spellbladenext.frostbloom0.description": "在周围释放冰霜新星，造成 {damage} 点伤害，获得一层寒冰魔能（至多四层），并同时使自己和受击敌人冰冻。寒冰魔能等级越高，伤害范围越大。",
+    "spell.spellbladenext.bladestorm.description": "召唤一道回旋漩涡，它会追踪并攻击施法者指定的目标，每半秒造成一次 {damage} 点的奥秘伤害。优先消耗爆发层数进行施法，无爆发时施法会使法术进入8秒钟的冷却。",
+    "item.spellbladenext.runefrosted_head": "寒冰符文头盔",
+    "item.spellbladenext.frostherald_legs": "严寒先驱护腿",
+    "spell.spellbladenext.frostbloom0.description": "在周围释放冰霜新星，寒气侵体，敌人亦受其害。对敌人造成 {damage} 点伤害并给予施法者一层寒冰魔能（至多四层；层数越高，伤害范围越大）。",
     "spell.spellbladenext.bladestorm.name": "回响风暴",
     "item.spellbladenext.frozen_legs": "死寒教士护腿",
-    "item.spellbladenext.frostherald_chest": "严寒纹章官服饰",
-    "stat.spellbladenext.hex": "施法次数",
+    "item.spellbladenext.frostherald_chest": "严寒先驱上装",
+    "stat.spellbladenext.hex": "魔咒值",
     "item.spellbladenext.flaming_falchion": "赤燃之刃",
-    "item.spellbladenext.ashes": "众星之尘",
+    "item.spellbladenext.ashes": "群星之灰",
     "item.spellbladenext.runeblaze_ingot": "烈焰符文锭",
     "item.spellbladenext.blazing_feet": "烈焰教士靴子",
     "spell.spellbladenext.frostbloom0.name": "冰霜雪莲",
-    "spell.spellbladenext.eldritchblast.description": "向目标所在方向发射冲击波，对一条线上的所有敌人造成 {damage} 点奥秘伤害。每有一层爆发效果，重复释放一次。",
+    "spell.spellbladenext.eldritchblast.description": "向目标所在方向发射冲击波，对一条线上的所有敌人造成 {damage} 点奥秘伤害。施法会消耗所有爆发层数，每有1层爆发，冲击波数量加1。",
     "item.spellbladenext.crystal_cutlass": "水晶短剑",
-    "spell.spellbladenext.coldbuff.description": "如果你有寒冰魔能IV+，解冻自己并使敌人以150%的效果冻伤，并获得8秒力量V。",
-    "item.spellbladenext.runefrosted_feet": "严寒符文靴子",
+    "spell.spellbladenext.coldbuff.description": "如果你有寒冰魔能IV+，施法时驱除体内的寒气，解除冰冻，同时获得8秒力量V效果，并赋予敌人150%的冰冻效果。",
+    "item.spellbladenext.runefrosted_feet": "寒冰符文靴子",
     "spell.spellbladenext.phoenixdive.name": "凤凰冲击",
     "item.spellbladenext.frost_claymore": "寒冰阔剑",
     "spell.spellbladenext.frostflourish.name": "寒冰华舞",
@@ -117,45 +117,45 @@
     "spell.spellbladenext.fireflourish.name": "火焰华舞",
     "item.spellbladenext.runegleaming_feet": "隐烁符文靴子",
     "item.spellbladenext.prismatic": "棱镜拟像",
-    "item.spellbladenext.runefrosted_legs": "严寒符文护腿",
-    "spell.spellbladenext.amethystslash.name": "紫水晶碎溅",
+    "item.spellbladenext.runefrosted_legs": "寒冰符文护腿",
+    "spell.spellbladenext.amethystslash.name": "紫晶碎溅",
     "spell.spellbladenext.deathchill.name": "死亡寒意",
-    "spell.spellbladenext.deathchill.description": "被动：寒气入骨，暖意难近。你造成的伤害将吸取敌人的热量，致使它们冰冻。主动：迅速进入冰冻状态，获得抗性提升（施法越久，状态效果等级越高）。",
+    "spell.spellbladenext.deathchill.description": "被动：寒气入骨，暖意难近。你会在造成伤害的同时吸取敌人的热量，使其无法抵御寒气的侵袭，瑟瑟发抖。主动：寒气迅速入体，施法者会逐渐进入冰冻状态，并获得最高三级的抗性提升效果，施法越久，抗性提升等级越高。",
     "effect.spellbladenext.slamming": "龙之震击",
     "entity.spellbladenext.gladius": "寒冰剑刃",
-    "spell.spellbladenext.frostflourish.description": "快速旋转，造成 {damage}_0 点物理伤害（无法暴击）与 {damage}_1 点寒冰伤害。",
-    "item.spellbladenext.phoenix_spell_book": "涅槃经籍",
-    "spell.spellbladenext.fireflourish.description": "快速旋转，造成 {damage}_0 点物理伤害（无法暴击）与 {damage}_1 点火焰伤害。",
+    "spell.spellbladenext.frostflourish.description": "快速旋转，造成 {damage}_0 点物理伤害与 {damage}_1 点寒冰法术伤害。",
+    "item.spellbladenext.phoenix_spell_book": "涅槃圣典",
+    "spell.spellbladenext.fireflourish.description": "快速旋转，造成 {damage}_0 点物理伤害与 {damage}_1 点火焰法术伤害。",
     "item.spellbladenext.debug": "调试物品",
     "item.spellbladenext.fire_blade": "火焰魔剑",
     "item.spellbladenext.runegleam_nugget": "隐烁符文螺栓",
-    "item.spellbladenext.arcaneherald_legs": "神秘纹章官护腿",
-    "spell.spellbladenext.finalstrike.description": "释放一道死亡穿透声波，造成 {damage}_0 点物理伤害和 {damage}_1 点奥秘法术伤害，随后传送到被攻击的最后一个敌人身后。",
-    "item.spellbladenext.finalstrikeoil": "音击涂料",
+    "item.spellbladenext.arcaneherald_legs": "神秘先驱护腿",
+    "spell.spellbladenext.finalstrike.description": "对直线上的敌人发起致命进攻。传送至最后一名敌人身后，并造成 {damage}_0 点物理伤害和 {damage}_1 点奥秘法术伤害。",
+    "item.spellbladenext.finalstrikeoil": "导音涂料",
     "item.spellbladenext.runeblaze_nugget": "烈焰符文螺栓",
-    "item.spellbladenext.ashherald_legs": "灰烬纹章官护腿",
-    "spell.spellbladenext.echoes.description": "被动：每4秒获得一层爆发状态效果。主动：对最后一次近战攻击的敌人造成 {damage} 点奥秘伤害。可以消耗爆发的层数攻击多次。",
+    "item.spellbladenext.ashherald_legs": "灰烬先驱护腿",
+    "spell.spellbladenext.echoes.description": "被动：每4秒获得一层爆发状态效果。主动：对受到你上一次近战攻击的敌人造成 {damage} 点奥秘伤害。可以消耗爆发的层数攻击多次。",
     "item.spellbladenext.runegleam_plate": "隐烁符文板",
     "spell.spellbladenext.phoenixdive.description": "向目标所在方向闪现，着陆时释放一次超新星爆炸，造成 {damage} 点火焰伤害并点燃敌人。",
     "item.spellbladenext.gleaming_legs": "隐烁教士护腿",
     "spell.spellbladenext.inferno.name": "炼狱之风",
     "spell.spellbladenext.flameslash.description": "造成每秒 {damage} 点火焰伤害。肆意地挥舞你的武器并发射爆燃碎片。",
-    "block.spellbladenext.hexblade": "魔剑",
+    "block.spellbladenext.hexblade": "咒剑",
     "spell.spellbladenext.frostslash.description": "造成每秒 {damage} 点寒冰伤害。肆意地挥舞你的武器并发射灵刃。",
-    "spell.spellbladenext.tempest.description": "持续旋转，每秒造成 {damage}_0 点物理伤害（无法暴击）和 {damage}_1 点寒冰伤害，攻击速度对伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将减少这个衰减。潜行以停止移动。",
-    "spell.spellbladenext.amethystslash.description": "造成每秒 {damage} 点奥秘伤害。肆意地挥舞你的武器并发射紫水晶尖刺。",
-    "spell.spellbladenext.inferno.description": "持续旋转，每秒造成 {damage}_0 点物理伤害（无法暴击）和 {damage}_1 点火焰伤害，攻击速度对伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将减少这个衰减。潜行以停止移动。",
-    "spell.spellbladenext.whirlwind.description": "持续旋转，每秒造成 {damage}_0 点物理伤害（无法暴击），攻击速度对两种伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将减少这个衰减。潜行以停止移动。",
+    "spell.spellbladenext.tempest.description": "持续旋转（按住潜行可以停止移动），每秒造成 {damage}_0 点物理伤害和 {damage}_1 点寒冰伤害，攻击速度对伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将降低衰减程度。",
+    "spell.spellbladenext.amethystslash.description": "肆意地挥舞你的武器并发射紫水晶尖刺。每秒造成 {damage} 点奥秘伤害。",
+    "spell.spellbladenext.inferno.description": "持续旋转（按住潜行可以停止移动），每秒造成 {damage}_0 点物理伤害和 {damage}_1 点火焰伤害，攻击速度对伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将降低衰减程度。",
+    "spell.spellbladenext.whirlwind.description": "持续旋转（按住潜行可以停止移动），每秒造成 {damage}_0 点物理伤害，攻击速度对伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将降低衰减程度。",
     "spell.spellbladenext.snuffout.name": "野火吹又生",
     "item.spellbladenext.starforge": "铸星魔刃",
-    "spell.spellbladenext.frostblink.description": "传送至一名敌人身后，造成 {damage}_0 点物理伤害（无法暴击）与 {damage}_1 点奥秘伤害。",
-    "spell.spellbladenext.snuffout.description": "周遭熊熊燃烧的烈焰如炙热炼狱，着火的敌人因而点燃了它周围的同伴，造成 {damage} 点火焰伤害。",
+    "spell.spellbladenext.frostblink.description": "传送至一名敌人身后，造成 {damage}_0 点物理伤害与 {damage}_1 点奥秘法术伤害。",
+    "spell.spellbladenext.snuffout.description": "周遭熊熊燃烧的烈焰如炙热炼狱，着火的敌人因而点燃了它周围的同伴，造成 {damage} 点火焰法术伤害。",
     "item.spellbladenext.thread": "希望之丝",
     "spell.spellbladenext.tempest.name": "狂风暴雨",
-    "item.spellbladenext.hexbladeitem": "魔剑",
+    "item.spellbladenext.hexbladeitem": "咒剑",
     "spell.spellbladenext.whirlwind.name": "旋风斩",
     "item.spellbladenext.voidforge": "无铸之刃",
-    "spell.spellbladenext.maelstrom.description": "持续旋转，每秒造成 {damage}_0 点物理伤害（无法暴击）和 {damage}_1 点奥秘伤害，攻击速度对伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将减少这个衰减。潜行以停止移动。",
+    "spell.spellbladenext.maelstrom.description": "持续旋转（按住潜行可以停止移动），每秒造成 {damage}_0 点物理伤害和 {damage}_1 点奥秘伤害，攻击速度对伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将降低衰减程度。",
     "spell.spellbladenext.sniper.name": "烈焰符文子弹",
     "item.spellbladenext.weaverswand": "织法者的魔杖",
     "spell.spellbladenext.riflebarrage.description": "施法时不断射击，造成至多一倍远程伤害，每次射击根据距离对前方锥型范围内的敌人额外造成 {damage} 点伤害。",
@@ -177,5 +177,6 @@
     "attribute.name.spellbladenext.convertfromfire": "火焰法术强度对攻击伤害的额外加成",
     "spell.spellbladenext.overblaze.name": "纵火盛宴",
     "attribute.name.spellbladenext.converttofire": "攻击伤害对火焰法术强度的额外加成",
-    "attribute.name.spellbladenext.converttoheal": "攻击伤害对治愈法术强度的额外加成"
+    "attribute.name.spellbladenext.converttoheal": "攻击伤害对治愈法术强度的额外加成",
+    "spellbladenext.spellbladetext": "如果使用这柄魔剑释放的法术符合魔剑对应的流派，你会获得力量和急迫效果，效果等级为对应流派法强值的四分之一，效果最长持续时间等于所施法术的最长冷却时间。"
 }
