--- a/global_packs/required_resources/aim_to_star_language_pack/assets/variantbookshelves/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/variantbookshelves/lang/zh_cn.json
@@ -1,1 +1,115 @@
-{}
+{
+    "block.variantbookshelves.mc_putrid_bookshelf": "腐臭的书架",
+    "block.variantbookshelves.bls_herringbone_birch_bookshelf": "人字形白桦书架",
+    "block.variantbookshelves.spruce_bookshelf": "云杉书架",
+    "block.variantbookshelves.bls_charred_bookshelf": "烧焦的书架",
+    "block.variantbookshelves.dark_oak_bookshelf": "深色橡木书架",
+    "block.variantbookshelves.ns_larch_bookshelf": "落叶松书架",
+    "block.variantbookshelves.ds_charred_bookshelf": "烧焦的书架",
+    "block.variantbookshelves.ru_cypress_bookshelf": "柏树书架",
+    "block.variantbookshelves.ru_pink_painted_bookshelf": "粉色喷漆书架",
+    "block.variantbookshelves.bamboo_bookshelf": "竹书架",
+    "block.variantbookshelves.ru_red_painted_bookshelf": "红色喷漆书架",
+    "block.variantbookshelves.ru_mauve_bookshelf": "粉红紫书架",
+    "block.variantbookshelves.bls_herringbone_bamboo_bookshelf": "人字形竹书架",
+    "block.variantbookshelves.bls_white_oak_bookshelf": "白橡木书架",
+    "block.variantbookshelves.bls_herringbone_cherry_bookshelf": "人字形樱花书架",
+    "block.variantbookshelves.bls_herringbone_dark_oak_bookshelf": "人字形深色橡木书架",
+    "block.variantbookshelves.birch_bookshelf": "白桦书架",
+    "block.variantbookshelves.ns_joshua_bookshelf": "约书亚书架",
+    "block.variantbookshelves.warped_bookshelf": "诡异书架",
+    "block.variantbookshelves.bw_elder_bookshelf": "老木书架",
+    "block.variantbookshelves.ru_brown_painted_bookshelf": "棕色喷漆书架",
+    "block.variantbookshelves.bls_herringbone_white_oak_bookshelf": "人字形白橡木书架",
+    "block.variantbookshelves.bm_blighted_balsa_bookshelf": "枯萎的木书架",
+    "block.variantbookshelves.ru_socotra_bookshelf": "苏科特拉书架",
+    "block.variantbookshelves.bls_herringbone_crimson_bookshelf": "人字形绯红木书架",
+    "block.minecraft.bookshelf": "橡木书架",
+    "block.variantbookshelves.ru_green_bioshroom_bookshelf": "绿色生物书架",
+    "block.variantbookshelves.bw_dragons_blood_bookshelf": "龙血木书架",
+    "block.variantbookshelves.bw_juniper_bookshelf": "杜松木书架",
+    "block.variantbookshelves.ru_palm_bookshelf": "棕榈书架",
+    "block.variantbookshelves.bm_ancient_oak_bookshelf": "远古橡木书架",
+    "block.variantbookshelves.ru_redwood_bookshelf": "红木书架",
+    "block.variantbookshelves.ru_brimwood_bookshelf": "枯木书架",
+    "block.variantbookshelves.jungle_bookshelf": "丛林木书架",
+    "block.variantbookshelves.bls_herringbone_raw_bamboo_bookshelf": "人字形生竹书架",
+    "block.variantbookshelves.bls_herringbone_warped_bookshelf": "人字形诡异木书架",
+    "block.variantbookshelves.ru_blue_painted_bookshelf": "蓝色喷漆书架",
+    "block.variantbookshelves.bot_shimmerwood_bookshelf": "闪光木书架",
+    "block.variantbookshelves.ns_olive_bookshelf": "橄榄书架",
+    "block.variantbookshelves.ns_fir_bookshelf": "杉木书架",
+    "block.variantbookshelves.ru_cyan_painted_bookshelf": "青色喷漆书架",
+    "block.variantbookshelves.ru_kapok_bookshelf": "木棉书架",
+    "block.variantbookshelves.prom_sakura_bookshelf": "樱花书架",
+    "block.variantbookshelves.dad_echo_bookshelf": "回声书架",
+    "block.variantbookshelves.ru_magnolia_bookshelf": "玉兰书架",
+    "block.variantbookshelves.bot_dreamwood_bookshelf": "梦幻木书架",
+    "block.variantbookshelves.ldv_cherry_bookshelf": "樱花书架",
+    "block.variantbookshelves.bls_herringbone_oak_bookshelf": "人字形橡木书架",
+    "block.variantbookshelves.ru_yellow_bioshroom_bookshelf": "黄色生物菌书架",
+    "block.variantbookshelves.bls_herringbone_jungle_bookshelf": "人字形丛林木书架",
+    "block.variantbookshelves.prom_dark_amaranth_bookshelf": "深紫红书架",
+    "block.variantbookshelves.ru_joshua_bookshelf": "约书亚书架",
+    "block.variantbookshelves.prom_palm_bookshelf": "棕榈书架",
+    "block.variantbookshelves.bls_herringbone_charred_bookshelf": "人字形烧焦的书架",
+    "block.variantbookshelves.ldbp_palm_bookshelf": "棕榈木书架",
+    "block.variantbookshelves.ru_cherry_bookshelf": "樱花书架",
+    "block.variantbookshelves.mangrove_bookshelf": "红树林木书架",
+    "block.variantbookshelves.ru_baobab_bookshelf": "猴面包树书架",
+    "block.variantbookshelves.bls_raw_bamboo_bookshelf": "生竹书架",
+    "block.variantbookshelves.cs_umbral_bookshelf": "暗影书架",
+    "block.variantbookshelves.ns_maple_bookshelf": "枫木书架",
+    "block.variantbookshelves.bw_cypress_bookshelf": "柏木书架",
+    "block.variantbookshelves.crimson_bookshelf": "绯红木书架",
+    "block.variantbookshelves.cherry_bookshelf": "樱花书架",
+    "block.variantbookshelves.ru_larch_bookshelf": "落叶松书架",
+    "block.variantbookshelves.ns_cedar_bookshelf": "雪松书架",
+    "block.variantbookshelves.ru_light_gray_painted_bookshelf": "淡灰色喷漆书架",
+    "block.variantbookshelves.ba_rotten_bookshelf": "腐烂的书架",
+    "block.variantbookshelves.ns_palo_verde_bookshelf": "柏树书架",
+    "block.variantbookshelves.ru_green_painted_bookshelf": "绿色喷漆书架",
+    "block.variantbookshelves.ns_coconut_bookshelf": "椰子书架",
+    "block.variantbookshelves.ru_blackwood_bookshelf": "黑木书架",
+    "block.variantbookshelves.ns_ghaf_bookshelf": "阿拉伯刺槐书架",
+    "block.variantbookshelves.ru_dead_bookshelf": "死亡书架",
+    "block.variantbookshelves.ru_pine_bookshelf": "松木书架",
+    "block.variantbookshelves.ru_black_painted_bookshelf": "黑色喷漆书架",
+    "block.variantbookshelves.ru_pink_bioshroom_bookshelf": "粉色生物书架",
+    "block.variantbookshelves.ru_eucalyptus_bookshelf": "桉树书架",
+    "block.variantbookshelves.ns_willow_bookshelf": "柳树书架",
+    "block.variantbookshelves.bls_herringbone_spruce_bookshelf": "人字形云杉木书架",
+    "block.variantbookshelves.ns_aspen_bookshelf": "白杨书架",
+    "block.variantbookshelves.prom_maple_bookshelf": "枫木书架",
+    "block.variantbookshelves.ru_light_blue_painted_bookshelf": "淡蓝色喷漆书架",
+    "block.variantbookshelves.ru_purple_painted_bookshelf": "紫色喷漆书架",
+    "block.variantbookshelves.ru_cobalt_bookshelf": "钴蓝书架",
+    "block.variantbookshelves.aa_strophar_bookshelf": "Strophar 书架",
+    "block.variantbookshelves.ru_lime_painted_bookshelf": "黄绿色喷漆书架",
+    "block.variantbookshelves.acacia_bookshelf": "金合欢书架",
+    "block.variantbookshelves.ru_blue_bioshroom_bookshelf": "蓝色生物书架",
+    "block.variantbookshelves.bls_herringbone_mangrove_bookshelf": "人字形红树木书架",
+    "block.variantbookshelves.ru_alpha_bookshelf": "阿尔法书架",
+    "block.variantbookshelves.ru_magenta_painted_bookshelf": "品红色喷漆书架",
+    "block.variantbookshelves.ns_redwood_bookshelf": "红木书架",
+    "block.variantbookshelves.cs_scorched_bookshelf": "烧焦的书架",
+    "block.variantbookshelves.aa_aeronos_bookshelf": "艾隆诺斯书架",
+    "block.variantbookshelves.ru_orange_painted_bookshelf": "橙色喷漆书架",
+    "block.variantbookshelves.aa_glacian_bookshelf": "Glacian 书架",
+    "block.variantbookshelves.ru_sculkwood_bookshelf": "幽魂木书架",
+    "block.variantbookshelves.bm_willow_bookshelf": "柳树书架",
+    "block.variantbookshelves.ns_wisteria_bookshelf": "紫藤书架",
+    "block.variantbookshelves.bm_swamp_cypress_bookshelf": "沼泽柏木书架",
+    "block.variantbookshelves.bls_herringbone_acacia_bookshelf": "人字形金合欢书架",
+    "block.variantbookshelves.tr_rubber_bookshelf": "橡胶书架",
+    "block.variantbookshelves.bot_livingwood_bookshelf": "活木书架",
+    "block.variantbookshelves.ru_gray_painted_bookshelf": "灰色喷漆书架",
+    "block.variantbookshelves.ns_sugi_bookshelf": "杉树书架",
+    "block.variantbookshelves.ns_cypress_bookshelf": "柏树书架",
+    "block.variantbookshelves.ru_maple_bookshelf": "枫木书架",
+    "block.variantbookshelves.ru_yellow_painted_bookshelf": "黄色喷漆书架",
+    "block.variantbookshelves.sp_stone_pine_bookshelf": "石松书架",
+    "block.variantbookshelves.ru_willow_bookshelf": "柳树书架",
+    "block.variantbookshelves.ee_primordial_bookshelf": "原始书架",
+    "block.variantbookshelves.ru_white_painted_bookshelf": "白色喷漆书架"
+}
