--- a/global_packs/required_resources/aim_to_star_language_pack/assets/variantfletchingtables/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/variantfletchingtables/lang/zh_cn.json
@@ -1,1 +1,96 @@
-{}
+{
+    "block.variantfletchingtables.ns_maple_fletching_table": "枫木制箭台",
+    "block.variantfletchingtables.ru_blue_painted_fletching_table": "蓝色喷漆制箭台",
+    "block.variantfletchingtables.aa_aeronos_fletching_table": "艾罗诺斯制箭台",
+    "block.variantfletchingtables.bamboo_fletching_table": "竹制箭台",
+    "block.variantfletchingtables.ns_sugi_fletching_table": "杉木制箭台",
+    "block.variantfletchingtables.ru_cyan_painted_fletching_table": "青色喷漆制箭台",
+    "block.variantfletchingtables.crimson_fletching_table": "绯红制箭台",
+    "block.variantfletchingtables.ru_cherry_fletching_table": "樱花制箭台",
+    "block.variantfletchingtables.ru_blue_bioshroom_fletching_table": "蓝生物菇制箭台",
+    "block.variantfletchingtables.ru_white_painted_fletching_table": "白色喷漆制箭台",
+    "block.variantfletchingtables.ru_black_painted_fletching_table": "黑色喷漆制箭台",
+    "block.variantfletchingtables.ns_cypress_fletching_table": "柏木制箭台",
+    "block.variantfletchingtables.ru_eucalyptus_fletching_table": "桉树制箭台",
+    "block.variantfletchingtables.cherry_fletching_table": "樱花制箭台",
+    "block.variantfletchingtables.ru_yellow_painted_fletching_table": "黄色喷漆制箭台",
+    "block.variantfletchingtables.bot_dreamwood_fletching_table": "梦幻木制箭台",
+    "block.variantfletchingtables.ru_magnolia_fletching_table": "玉兰制箭台",
+    "block.variantfletchingtables.dark_oak_fletching_table": "深色橡木制箭台",
+    "block.variantfletchingtables.prom_sakura_fletching_table": "樱花制箭台",
+    "block.variantfletchingtables.ru_green_bioshroom_fletching_table": "绿生物菇制箭台",
+    "block.variantfletchingtables.prom_dark_amaranth_fletching_table": "暗紫红制箭台",
+    "block.variantfletchingtables.ru_pink_painted_fletching_table": "粉红色喷漆制箭台",
+    "block.variantfletchingtables.ru_brimwood_fletching_table": "边缘木制箭台",
+    "block.variantfletchingtables.ru_cypress_fletching_table": "柏树制箭台",
+    "block.variantfletchingtables.ns_olive_fletching_table": "橄榄制箭台",
+    "block.variantfletchingtables.ru_mauve_fletching_table": "粉紫色制箭台",
+    "block.variantfletchingtables.cs_umbral_fletching_table": "暗影制箭台",
+    "block.variantfletchingtables.ru_purple_painted_fletching_table": "紫色喷漆制箭台",
+    "block.variantfletchingtables.ru_light_gray_painted_fletching_table": "淡灰色喷漆制箭台",
+    "block.variantfletchingtables.mangrove_fletching_table": "红树制箭台",
+    "block.variantfletchingtables.mc_putrid_fletching_table": "腐烂制箭台",
+    "block.variantfletchingtables.dad_echo_fletching_table": "回音制箭台",
+    "block.variantfletchingtables.ru_yellow_bioshroom_fletching_table": "黄色生物菌箭制箭台",
+    "block.variantfletchingtables.ns_joshua_fletching_table": "约书亚制箭台",
+    "block.variantfletchingtables.ru_alpha_oak_fletching_table": "Alpha橡木制箭台",
+    "block.variantfletchingtables.aa_glacian_fletching_table": "格莱西亚制箭台",
+    "block.variantfletchingtables.ba_rotten_fletching_table": "腐烂制箭台",
+    "block.variantfletchingtables.ns_fir_fletching_table": "冷杉制箭台",
+    "block.variantfletchingtables.ru_sculkwood_fletching_table": "吱吱木制箭台",
+    "block.variantfletchingtables.ru_baobab_fletching_table": "猴面包树制箭台",
+    "block.variantfletchingtables.jungle_fletching_table": "丛林制箭台",
+    "block.variantfletchingtables.ru_dead_fletching_table": "枯萎制箭台",
+    "block.variantfletchingtables.ns_aspen_fletching_table": "白杨制箭台",
+    "block.variantfletchingtables.prom_maple_fletching_table": "枫木制箭台",
+    "block.variantfletchingtables.ru_joshua_fletching_table": "约书亚制箭台",
+    "block.variantfletchingtables.ldbp_palm_fletching_table": "棕榈制箭台",
+    "block.variantfletchingtables.bot_shimmerwood_fletching_table": "闪光木制箭台",
+    "block.variantfletchingtables.ru_socotra_fletching_table": "苏格特拉制箭台",
+    "block.variantfletchingtables.acacia_fletching_table": "金合欢制箭台",
+    "block.variantfletchingtables.bm_willow_fletching_table": "柳木制箭台",
+    "block.variantfletchingtables.ldv_cherry_fletching_table": "樱花制箭台",
+    "block.variantfletchingtables.ru_red_painted_fletching_table": "红色喷漆制箭台",
+    "block.variantfletchingtables.bm_blighted_balsa_fletching_table": "枯萎木制箭台",
+    "block.variantfletchingtables.ru_gray_painted_fletching_table": "灰色喷漆制箭台",
+    "block.minecraft.fletching_table": "白桦制箭台",
+    "block.variantfletchingtables.bw_cypress_fletching_table": "柏木制箭台",
+    "block.variantfletchingtables.ru_palm_fletching_table": "棕榈制箭台",
+    "block.variantfletchingtables.ru_willow_fletching_table": "柳木箭制箭台",
+    "block.variantfletchingtables.ru_kapok_fletching_table": "木棉制箭台",
+    "block.variantfletchingtables.spruce_fletching_table": "云杉木箭制箭台",
+    "block.variantfletchingtables.bw_dragons_blood_fletching_table": "龙血木制箭台",
+    "block.variantfletchingtables.bls_raw_bamboo_fletching_table": "生竹制箭台",
+    "block.variantfletchingtables.ee_primordial_fletching_table": "原始制箭台",
+    "block.variantfletchingtables.aa_strophar_fletching_table": "斯特罗法尔制箭台",
+    "block.variantfletchingtables.ru_maple_fletching_table": "枫木制箭台",
+    "block.variantfletchingtables.ru_pink_bioshroom_fletching_table": "粉红生物菇制箭台",
+    "block.variantfletchingtables.bw_elder_fletching_table": "长老木制箭台",
+    "block.variantfletchingtables.bm_ancient_oak_fletching_table": "古老橡木制箭台",
+    "block.variantfletchingtables.warped_fletching_table": "诡异制箭台",
+    "block.variantfletchingtables.ru_redwood_fletching_table": "红木制箭台",
+    "block.variantfletchingtables.ns_wisteria_fletching_table": "紫藤制箭台",
+    "block.variantfletchingtables.bls_white_oak_fletching_table": "白橡制箭台",
+    "block.variantfletchingtables.bm_swamp_cypress_fletching_table": "沼泽柏木制箭台",
+    "block.variantfletchingtables.ru_larch_fletching_table": "落叶松制箭台",
+    "block.variantfletchingtables.ru_light_blue_painted_fletching_table": "淡蓝色喷漆制箭台",
+    "block.variantfletchingtables.bw_juniper_fletching_table": "杜松木制箭台",
+    "block.variantfletchingtables.ru_pine_fletching_table": "松木制箭台",
+    "block.variantfletchingtables.tr_rubber_fletching_table": "橡胶箭制箭台",
+    "block.variantfletchingtables.ds_charred_fletching_table": "焦炭制箭台",
+    "block.variantfletchingtables.ru_blackwood_fletching_table": "黑木制箭台",
+    "block.variantfletchingtables.ru_cobalt_fletching_table": "钴制箭台",
+    "block.variantfletchingtables.bot_livingwood_fletching_table": "生命木制箭台",
+    "block.variantfletchingtables.ns_willow_fletching_table": "柳木制箭台",
+    "block.variantfletchingtables.ru_green_painted_fletching_table": "绿色喷漆制箭台",
+    "block.variantfletchingtables.oak_fletching_table": "橡木制箭台",
+    "block.variantfletchingtables.prom_palm_fletching_table": "棕榈制箭台",
+    "block.variantfletchingtables.sp_stone_pine_fletching_table": "石松木箭制箭台",
+    "block.variantfletchingtables.ru_brown_painted_fletching_table": "棕色喷漆制箭台",
+    "block.variantfletchingtables.ru_lime_painted_fletching_table": "黄绿色喷漆制箭台",
+    "block.variantfletchingtables.ru_orange_painted_fletching_table": "橙色喷漆制箭台",
+    "block.variantfletchingtables.bls_charred_fletching_table": "焦炭制箭台",
+    "block.variantfletchingtables.ru_magenta_painted_fletching_table": "品红色喷漆制箭台",
+    "block.variantfletchingtables.ns_redwood_fletching_table": "红木制箭台",
+    "block.variantfletchingtables.cs_scorched_fletching_table": "烧焦制箭台"
+}
