--- a/global_packs/required_resources/aim_to_star_language_pack/assets/variantshields/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/variantshields/lang/zh_cn.json
@@ -1,1 +1,70 @@
-{}
+{
+    "item.variantshields.cherry_iron_shield": "樱花木铁盾牌",
+    "item.variantshields.jungle_golden_shield": "丛林木金盾牌",
+    "item.variantshields.warped_iron_shield": "诡异木铁盾牌",
+    "item.variantshields.crimson_stone_shield": "绯红木石盾牌",
+    "item.variantshields.acacia_stone_shield": "金合欢木石盾牌",
+    "item.variantshields.dark_oak_iron_shield": "深色橡木铁盾牌",
+    "item.variantshields.acacia_golden_shield": "金合欢木金盾牌",
+    "item.variantshields.mangrove_stone_shield": "红树石盾牌",
+    "item.variantshields.bamboo_stone_shield": "竹石盾牌",
+    "item.variantshields.mangrove_iron_shield": "红树铁盾牌",
+    "item.variantshields.warped_diamond_shield": "诡异木钻石盾牌",
+    "variantshields.cooldown": "冷却时间",
+    "item.variantshields.oak_diamond_shield": "橡木钻石盾牌",
+    "item.variantshields.crimson_golden_shield": "绯红木金盾牌",
+    "item.variantshields.spruce_stone_shield": "云杉木石盾牌",
+    "item.variantshields.warped_stone_shield": "诡异木石盾牌",
+    "item.variantshields.spruce_golden_shield": "云杉木金盾牌",
+    "item.variantshields.dark_oak_golden_shield": "深色橡木金盾牌",
+    "item.variantshields.mangrove_netherite_shield": "红树下界合金盾牌",
+    "item.variantshields.cherry_wood_shield": "樱花木盾牌",
+    "item.variantshields.oak_stone_shield": "橡木石盾牌",
+    "item.variantshields.spruce_diamond_shield": "云杉木钻石盾牌",
+    "item.variantshields.birch_diamond_shield": "白桦木钻石盾牌",
+    "item.variantshields.bamboo_diamond_shield": "竹钻石盾牌",
+    "item.variantshields.cherry_golden_shield": "樱花木金盾牌",
+    "item.variantshields.bamboo_iron_shield": "竹铁盾牌",
+    "item.variantshields.bamboo_wood_shield": "竹盾牌",
+    "item.variantshields.oak_wood_shield": "橡木盾牌",
+    "item.variantshields.warped_wood_shield": "诡异木盾牌",
+    "item.variantshields.jungle_iron_shield": "丛林木铁盾牌",
+    "variantshields.resourcepacks": "盾牌更名为橡木铁盾牌",
+    "item.variantshields.jungle_stone_shield": "丛林木石盾牌",
+    "variantshields.item_group": "更多盾牌",
+    "item.variantshields.crimson_netherite_shield": "绯红木下界合金盾牌",
+    "item.variantshields.dark_oak_diamond_shield": "深色橡木钻石盾牌",
+    "item.variantshields.mangrove_diamond_shield": "红树钻石盾牌",
+    "item.variantshields.jungle_diamond_shield": "丛林木钻石盾牌",
+    "item.variantshields.cherry_netherite_shield": "樱花木下界合金盾牌",
+    "item.variantshields.dark_oak_netherite_shield": "深色橡木下界合金盾牌",
+    "item.variantshields.acacia_netherite_shield": "金合欢木下界合金盾牌",
+    "item.variantshields.birch_wood_shield": "白桦木盾牌",
+    "item.variantshields.acacia_wood_shield": "金合欢木盾牌",
+    "item.variantshields.bamboo_netherite_shield": "竹下界合金盾牌",
+    "item.variantshields.birch_iron_shield": "白桦木铁盾牌",
+    "item.variantshields.cherry_diamond_shield": "樱花木钻石盾牌",
+    "item.variantshields.birch_stone_shield": "白桦木石盾牌",
+    "item.variantshields.cherry_stone_shield": "樱花木石盾牌",
+    "item.variantshields.warped_golden_shield": "诡异木金盾牌",
+    "item.variantshields.oak_golden_shield": "橡木金盾牌",
+    "item.variantshields.mangrove_golden_shield": "红树金盾牌",
+    "item.variantshields.jungle_wood_shield": "丛林木盾牌",
+    "item.variantshields.oak_netherite_shield": "橡木下界合金盾牌",
+    "item.variantshields.spruce_iron_shield": "云杉木铁盾牌",
+    "item.variantshields.birch_golden_shield": "白桦木金盾牌",
+    "item.variantshields.spruce_netherite_shield": "云杉木下界合金盾牌",
+    "item.variantshields.dark_oak_wood_shield": "深色橡木盾牌",
+    "item.variantshields.mangrove_wood_shield": "红树木盾牌",
+    "item.variantshields.dark_oak_stone_shield": "深色橡木石盾牌",
+    "item.variantshields.crimson_iron_shield": "绯红木铁盾牌",
+    "item.variantshields.acacia_iron_shield": "金合欢木铁盾牌",
+    "item.variantshields.crimson_diamond_shield": "绯红木钻石盾牌",
+    "item.variantshields.spruce_wood_shield": "云杉木盾牌",
+    "item.variantshields.jungle_netherite_shield": "丛林木下界合金盾牌",
+    "item.variantshields.warped_netherite_shield": "诡异木下界合金盾牌",
+    "item.variantshields.bamboo_golden_shield": "竹金盾牌",
+    "item.variantshields.acacia_diamond_shield": "金合欢木钻石盾牌",
+    "item.variantshields.crimson_wood_shield": "绯红木盾牌",
+    "item.variantshields.birch_netherite_shield": "白桦木下界合金盾牌"
+}
