--- a/global_packs/required_resources/aim_to_star_language_pack/assets/variantchiseledbookshelves/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/variantchiseledbookshelves/lang/zh_cn.json
@@ -1,1 +1,99 @@
-{}
+{
+    "block.variantchiseledbookshelves.crimson_chiseled_bookshelf": "绯红雕纹书架",
+    "block.variantchiseledbookshelves.mangrove_chiseled_bookshelf": "红树雕纹书架",
+    "block.variantchiseledbookshelves.ru_yellow_painted_chiseled_bookshelf": "黄色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ns_wisteria_chiseled_bookshelf": "紫藤雕纹书架",
+    "block.variantchiseledbookshelves.ldv_cherry_chiseled_bookshelf": "樱花雕纹书架",
+    "block.variantchiseledbookshelves.cherry_chiseled_bookshelf": "樱花雕纹书架",
+    "block.variantchiseledbookshelves.ru_purple_painted_chiseled_bookshelf": "紫色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.dad_echo_chiseled_bookshelf": "回音雕纹书架",
+    "block.variantchiseledbookshelves.ds_charred_chiseled_bookshelf": "烧焦雕纹书架",
+    "block.variantchiseledbookshelves.ru_larch_chiseled_bookshelf": "落叶松雕纹书架",
+    "block.variantchiseledbookshelves.ru_green_painted_chiseled_bookshelf": "绿色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ru_mauve_chiseled_bookshelf": "紫红色雕纹书架",
+    "block.variantchiseledbookshelves.ru_lime_painted_chiseled_bookshelf": "黄绿色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ns_sugi_chiseled_bookshelf": "杉木雕纹书架",
+    "block.variantchiseledbookshelves.ru_maple_chiseled_bookshelf": "枫木雕纹书架",
+    "block.variantchiseledbookshelves.ru_orange_painted_chiseled_bookshelf": "橙色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ru_pine_chiseled_bookshelf": "松木雕纹书架",
+    "block.variantchiseledbookshelves.ns_willow_chiseled_bookshelf": "柳树雕纹书架",
+    "block.variantchiseledbookshelves.ns_joshua_chiseled_bookshelf": "约书亚雕纹书架",
+    "block.variantchiseledbookshelves.ru_redwood_chiseled_bookshelf": "红木雕纹书架",
+    "block.variantchiseledbookshelves.ru_light_blue_painted_chiseled_bookshelf": "淡蓝色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ru_yellow_bioshroom_chiseled_bookshelf": "黄色生物菇雕纹书架",
+    "block.variantchiseledbookshelves.sp_stone_pine_chiseled_bookshelf": "石松雕纹书架",
+    "block.variantchiseledbookshelves.ru_cyan_painted_chiseled_bookshelf": "青色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.bm_willow_chiseled_bookshelf": "柳树雕纹书架",
+    "block.variantchiseledbookshelves.ru_cobalt_chiseled_bookshelf": "钴雕纹书架",
+    "block.variantchiseledbookshelves.spruce_chiseled_bookshelf": "云杉雕纹书架",
+    "block.variantchiseledbookshelves.ns_olive_chiseled_bookshelf": "橄榄雕纹书架",
+    "block.variantchiseledbookshelves.bot_dreamwood_chiseled_bookshelf": "梦幻木雕纹书架",
+    "block.variantchiseledbookshelves.bls_raw_bamboo_chiseled_bookshelf": "原竹雕纹书架",
+    "block.variantchiseledbookshelves.bm_ancient_oak_chiseled_bookshelf": "古橡木雕纹书架",
+    "block.variantchiseledbookshelves.ru_brimwood_chiseled_bookshelf": "卡斯特尖刺木雕纹书架",
+    "block.variantchiseledbookshelves.ns_larch_chiseled_bookshelf": "落叶松雕纹书架",
+    "block.variantchiseledbookshelves.ba_rotten_chiseled_bookshelf": "腐朽雕纹书架",
+    "block.variantchiseledbookshelves.ru_magenta_painted_chiseled_bookshelf": "品红色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ru_joshua_chiseled_bookshelf": "约书亚雕纹书架",
+    "block.variantchiseledbookshelves.mc_putrid_chiseled_bookshelf": "腐臭雕纹书架",
+    "block.variantchiseledbookshelves.ns_redwood_chiseled_bookshelf": "红木雕纹书架",
+    "block.variantchiseledbookshelves.ns_maple_chiseled_bookshelf": "枫木雕纹书架",
+    "block.variantchiseledbookshelves.ru_palm_chiseled_bookshelf": "棕榈雕纹书架",
+    "block.variantchiseledbookshelves.bw_dragons_blood_chiseled_bookshelf": "龙血木雕纹书架",
+    "block.variantchiseledbookshelves.ru_pink_bioshroom_chiseled_bookshelf": "粉色生物菇雕纹书架",
+    "block.variantchiseledbookshelves.prom_palm_chiseled_bookshelf": "棕榈雕纹书架",
+    "block.variantchiseledbookshelves.bamboo_chiseled_bookshelf": "竹雕纹书架",
+    "block.variantchiseledbookshelves.bls_charred_chiseled_bookshelf": "烧焦雕纹书架",
+    "block.variantchiseledbookshelves.dark_oak_chiseled_bookshelf": "深色橡木雕纹书架",
+    "block.variantchiseledbookshelves.ru_kapok_chiseled_bookshelf": "木棉雕纹书架",
+    "block.variantchiseledbookshelves.prom_dark_amaranth_chiseled_bookshelf": "暗紫木雕纹书架",
+    "block.variantchiseledbookshelves.prom_maple_chiseled_bookshelf": "枫木雕纹书架",
+    "block.variantchiseledbookshelves.bw_elder_chiseled_bookshelf": "老者木雕纹书架",
+    "block.variantchiseledbookshelves.ru_gray_painted_chiseled_bookshelf": "灰色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ru_willow_chiseled_bookshelf": "柳木雕纹书架",
+    "block.variantchiseledbookshelves.ru_cypress_chiseled_bookshelf": "柏木雕纹书架",
+    "block.variantchiseledbookshelves.ns_cedar_chiseled_bookshelf": "雪松雕纹书架",
+    "block.variantchiseledbookshelves.ru_eucalyptus_chiseled_bookshelf": "桉树雕纹书架",
+    "block.minecraft.chiseled_bookshelf": "橡木雕纹书架",
+    "block.variantchiseledbookshelves.warped_chiseled_bookshelf": "诡异雕纹书架",
+    "block.variantchiseledbookshelves.birch_chiseled_bookshelf": "白桦雕纹书架",
+    "block.variantchiseledbookshelves.ru_socotra_chiseled_bookshelf": "索科特拉雕纹书架",
+    "block.variantchiseledbookshelves.tr_rubber_chiseled_bookshelf": "橡胶雕纹书架",
+    "block.variantchiseledbookshelves.aa_aeronos_chiseled_bookshelf": "埃罗诺斯雕纹书架",
+    "block.variantchiseledbookshelves.ru_green_bioshroom_chiseled_bookshelf": "绿色生物菌雕纹书架",
+    "block.variantchiseledbookshelves.ru_blue_painted_chiseled_bookshelf": "蓝色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ee_primordial_chiseled_bookshelf": "原始雕纹书架",
+    "block.variantchiseledbookshelves.ru_red_painted_chiseled_bookshelf": "红色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ns_cypress_chiseled_bookshelf": "柏木雕纹书架",
+    "block.variantchiseledbookshelves.ru_black_painted_chiseled_bookshelf": "黑色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.bm_blighted_balsa_chiseled_bookshelf": "枯萎木雕纹书架",
+    "block.variantchiseledbookshelves.ns_fir_chiseled_bookshelf": "冷杉雕纹书架",
+    "block.variantchiseledbookshelves.bw_juniper_chiseled_bookshelf": "杜松雕纹书架",
+    "block.variantchiseledbookshelves.ns_coconut_chiseled_bookshelf": "椰子雕纹书架",
+    "block.variantchiseledbookshelves.jungle_chiseled_bookshelf": "丛林雕纹书架",
+    "block.variantchiseledbookshelves.ldbp_palm_chiseled_bookshelf": "棕榈木雕纹书架",
+    "block.variantchiseledbookshelves.ru_baobab_chiseled_bookshelf": "猴面包树雕纹书架",
+    "block.variantchiseledbookshelves.ru_blackwood_chiseled_bookshelf": "黑木雕纹书架",
+    "block.variantchiseledbookshelves.acacia_chiseled_bookshelf": "金合欢雕纹书架",
+    "block.variantchiseledbookshelves.ns_palo_verde_chiseled_bookshelf": "帕洛维迪雕纹书架",
+    "block.variantchiseledbookshelves.bm_swamp_cypress_chiseled_bookshelf": "沼泽柏木雕纹书架",
+    "block.variantchiseledbookshelves.bot_livingwood_chiseled_bookshelf": "活木雕纹书架",
+    "block.variantchiseledbookshelves.ru_alpha_chiseled_bookshelf": "阿尔法雕纹书架",
+    "block.variantchiseledbookshelves.cs_scorched_chiseled_bookshelf": "烧焦雕纹书架",
+    "block.variantchiseledbookshelves.ns_aspen_chiseled_bookshelf": "白杨雕纹书架",
+    "block.variantchiseledbookshelves.prom_sakura_chiseled_bookshelf": "樱花雕纹书架",
+    "block.variantchiseledbookshelves.aa_strophar_chiseled_bookshelf": "斯特罗法雕纹书架",
+    "block.variantchiseledbookshelves.cs_umbral_chiseled_bookshelf": "暗影雕纹书架",
+    "block.variantchiseledbookshelves.ru_dead_chiseled_bookshelf": "枯木雕纹书架",
+    "block.variantchiseledbookshelves.ru_blue_bioshroom_chiseled_bookshelf": "蓝色生物菌雕纹书架",
+    "block.variantchiseledbookshelves.aa_glacian_chiseled_bookshelf": "冰川雕纹书架",
+    "block.variantchiseledbookshelves.bw_cypress_chiseled_bookshelf": "柏木雕纹书架",
+    "block.variantchiseledbookshelves.ru_pink_painted_chiseled_bookshelf": "粉红色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.bls_white_oak_chiseled_bookshelf": "白橡雕纹书架",
+    "block.variantchiseledbookshelves.ru_white_painted_chiseled_bookshelf": "白色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.bot_shimmerwood_chiseled_bookshelf": "闪光木雕纹书架",
+    "block.variantchiseledbookshelves.ru_brown_painted_chiseled_bookshelf": "棕色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ru_light_gray_painted_chiseled_bookshelf": "淡灰色喷漆雕纹书架",
+    "block.variantchiseledbookshelves.ru_magnolia_chiseled_bookshelf": "木兰花雕纹书架",
+    "block.variantchiseledbookshelves.ns_ghaf_chiseled_bookshelf": "葛夫雕纹书架"
+}
