添加simplyswords指南书汉化，修复紫金魔艺小细节错误

--- a/global_packs/required_resources/aim_to_star_language_pack/assets/amethyst_imbuement/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/amethyst_imbuement/lang/zh_cn.json
@@ -144,11 +144,11 @@
     "amethyst_imbuement.advancement.path_missed": "失遇之道",
     "amethyst_imbuement.advancement.path_missed.desc": "注魔一根虹彩法杖，不开启特化升级之道",
     "amethyst_imbuement.advancement.path_redemption": "救赎之道",
-    "amethyst_imbuement.advancement.path_redemption.desc": "将二级 §a△恩典§r之杖升级为罪之赎。",
+    "amethyst_imbuement.advancement.path_redemption.desc": "将二级§a△恩典§r之杖升级为罪之赎。",
     "amethyst_imbuement.advancement.path_resonance": "共鸣之道",
     "amethyst_imbuement.advancement.path_resonance.desc": "将二级§9◇智慧§r之杖升级为振之谐。",
     "amethyst_imbuement.advancement.path_sojourn": "羁旅之道",
-    "amethyst_imbuement.advancement.path_sojourn.desc": "将二级§9◇智慧之杖§r升级为羁之旅。",
+    "amethyst_imbuement.advancement.path_sojourn.desc": "将二级§9◇智慧§r之杖升级为羁之旅。",
     "amethyst_imbuement.advancement.path_wit": "智慧之道",
     "amethyst_imbuement.advancement.path_wit.desc": "将欧泊法杖升级为一级§9◇智慧§r之杖。",
     "amethyst_imbuement.advancement.pillars": "闪耀螺旋",
